# pagoda

./: .clang-format  .gitignore  .gitmodules  .travis.yml  404.html  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  conanfile.py  index.html  search.html  sitemap.xml
include/: CMakeLists.txt
include/pagoda/: api.h  pagoda.h
include/pagoda/common/: factory.h  pluggable_factory.h  plugin.h  version.h
include/pagoda/graph/: graph.h  node.h  node_factory.h  node_set.h
include/pagoda/image/: image.h  image_system.h
include/pagoda/objects/: interface.h  interface_callback.h  operation_factory.h  (+4 more)
performance_tests/math_lib/: CMakeLists.txt  profile_vec_arithmetics.cpp  profile_vec_base.cpp
performance_tests/parameter/: CMakeLists.txt  parameter_resolver.cpp
source/: CMakeLists.txt  pagoda.cpp  pagoda.h  selector.cpp  selector.h
source/common/: CMakeLists.txt  README.md  assertions.cpp  assertions.h  const_str.h  exception.cpp  exception.h  factory.h  file_util.cpp  file_util.h  logger.cpp  logger.h  profiler.cpp  profiler.h  pugixml.cpp  range.h  statistics.cpp  statistics.h  unimplemented.cpp  unimplemented.h  utils.cpp  utils.h  version.cpp  version.h
source/dynamic_value/: CMakeLists.txt  boolean_value.cpp  boolean_value.h  builtin_class.cpp  builtin_class.h  callable_body_not_set.cpp  callable_body_not_set.h  class_base.cpp  class_base.h  dynamic_class.cpp  dynamic_class.h  dynamic_instance.cpp  dynamic_instance.h  dynamic_plane.cpp  dynamic_plane.h  dynamic_value_base.cpp  dynamic_value_base.h  dynamic_value_table.cpp  dynamic_value_table.h  expression.cpp  expression.h  float_value.cpp  float_value.h  free_function_callable_body.h  function.cpp  function.h  get_value_as.h  icallable.h  icallable_body.h  integer_value.cpp  integer_value.h  member_function_callable_body.h  null_object_value.cpp  null_object_value.h  register_member_function.h  set_value_from.h  string_value.cpp  string_value.h  type_info.cpp  type_info.h  (+7 more)
source/geometry_core/: CMakeLists.txt  README.md  geometry.h  geometry_builder.h  geometry_exporter.h  geometry_sizes.h  geometry_topology.h  indexed_container.h  scope.cpp  scope.h  split_point_topology.cpp  split_point_topology.h
source/geometry_operations/: CMakeLists.txt  clip.h  create_box.h  create_rect.h  create_sphere.h  ear_clipping.h  explode_to_faces.h  extrusion.h  extrusion_profile.h  face_offset.h  matrix_transform.h  plane_splits.h  triangulate.h
source/math_lib/: CMakeLists.txt  bissectrix.h  cross_product.h  degrees.h  dot_product.h  intersection.h  length.h  line_3d.h  line_segment_3d.h  math_utils.h  matrix_arithmetic.h  matrix_base.h  nearest_points.h  normalize.h  orthogonal.h  plane.h  projection.h  radians.h  transpose.h  vec_arithmetic.h  vec_base.h
source/parameter/: CMakeLists.txt  compiler.cpp  compiler.h  context.cpp  context.h  enumeration_parameter.h  expression.cpp  expression.h  float_parameter.h  parameter.cpp  parameter.h  parameter_base.cpp  parameter_base.h  parameter_exception.cpp  parameter_exception.h  parameter_identifier.cpp  parameter_identifier.h  parameter_resolver.cpp  parameter_resolver.h  parameter_validation.cpp  parameter_validation.h  parameterizable.h  string_parameter.h  variable.cpp  variable.h  variable_resolver.cpp  variable_resolver.h
source/pgscript/: CMakeLists.txt
source/procedural_graph/: CMakeLists.txt  breadth_first_node_visitor.h  construction_argument_not_found.cpp  construction_argument_not_found.h  default_scheduler.cpp  default_scheduler.h  execution_queue.cpp  execution_queue.h  graph.cpp  graph.h  graph_dot_exporter.cpp  graph_dot_exporter.h  graph_execution_context.cpp  graph_execution_context.h  graph_node_visitor.h  graph_reader_grammar.h  input_interface_execution.cpp  input_interface_execution.h  input_interface_node.cpp  input_interface_node.h  node.cpp  node.h  node_execution.cpp  node_execution.h  node_execution_result.cpp  node_execution_result.h  node_factory.cpp  node_factory.h  node_set.cpp  node_set.h  node_set_visitor.h  node_type.h  node_visitor.h  operation_execution.cpp  operation_execution.h  operation_node.cpp  operation_node.h  output_interface_execution.cpp  output_interface_execution.h  output_interface_node.cpp  (+18 more)
source/procedural_objects/: CMakeLists.txt  clip_geometry.cpp  clip_geometry.h  create_box.cpp  create_box.h  create_rect.cpp  create_rect.h  create_sphere.cpp  create_sphere.h  export_geometry.cpp  export_geometry.h  extract_faces.cpp  extract_faces.h  extract_scope.cpp  extract_scope.h  extrude_geometry.cpp  extrude_geometry.h  face_offset.cpp  face_offset.h  geometry_component.cpp  geometry_component.h  geometry_system.cpp  geometry_system.h  hierarchical_component.cpp  hierarchical_component.h  hierarchical_system.cpp  hierarchical_system.h  operation_factory.cpp  operation_factory.h  procedural_component.cpp  procedural_component.h  procedural_component_system.cpp  procedural_component_system.h  procedural_component_system_base.cpp  procedural_component_system_base.h  procedural_object.cpp  procedural_object.h  procedural_object_mask.h  procedural_object_predicate.cpp  procedural_object_predicate.h  (+26 more)
source/selscript/: CMakeLists.txt
src/pagoda/: CMakeLists.txt  pagoda.cpp  pagoda.h
src/pgeditor/: CMakeLists.txt
src/pgframes/: CMakeLists.txt  main_loop.cpp  main_loop.h  platform_window.cpp  platform_window.h  window.cpp  window.h
tests/pgscript/: CMakeLists.txt  main.cpp
tests/plugin/: CMakeLists.txt  load_plugin.cpp  plugin.h
tests/regression_tests/: CMakeLists.txt  create_rect.sel  export_geometry.sel  extrusion.sel  main.cpp  main.cpp.in  parameter_definition.sel  parameter_overwrite.sel  parameter_renaming.sel  regression_test.py
tests/selscript/: CMakeLists.txt  main.cpp
tests/unit_tests/: CMakeLists.txt  main.cpp  test_utils.cpp  test_utils.h
tools/: CMakeLists.txt  graph_reader.cpp  graph_runner.cpp  pagoda.cpp  plugin.json  sel.cpp
tools/profiles/: macos_clang_Release_gh.txt  ubuntu_clang_Release_gh.txt  ubuntu_gcc_Release_gh.txt  win_clang_Release_gh.txt  win_msvc_Release_gh.txt  win_msys2_Release_gh.txt
(+1168 files in other folders)
